--- a/bootstrap-exercice-one-million-lines-master/css/custom.css
+++ b/bootstrap-exercice-one-million-lines-master/css/custom.css
@@ -6,7 +6,7 @@
     color:  var(--bs-grey);
     
 }
-/*gris couleur pour nav?*/
+/*gris couleur pour le contenu de menu*/
 a.navbar-brand{
     color:  var(--bs-grey);
 }
